--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -1,9 +1,10 @@
+@import '../../vendor/varibles';
+
 .main {
   padding: 90px 0 60px 0;
   max-width: 1920px;
-  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #fff;
+  background-color: $background-white;
 }
